--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "API desenvolvida no programa Explorer da Rocketseat"
+  "description": "API desenvolvida no programa Explorer da Rocketseat",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
